src/objects/ints__Yodlee_Cobrand_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__APP_ID__c</fullName>
        <label>APP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Cobrand_Password__c</fullName>
        <label>Cobrand Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Cobrand_Username__c</fullName>
        <label>Cobrand Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Cobrand_id__c</fullName>
        <label>Cobrand id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Rest_URL__c</fullName>
        <label>Rest URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ints__Soap_URL__c</fullName>
        <label>Soap URL</label>
        <type>Url</type>
    </fields>
    <label>Yodlee Cobrand Credentials</label>
</CustomObject>